load("@ros2//:ros_cc.bzl", "ros_cc_binary")
load("@ros2//:ros_cc.bzl", "ros_cc_test")
load("@ros2//:ros_py.bzl", "ros_py_binary", "ros_py_test")
load("@ros2//:rosidl.bzl", "rosidl_interfaces_group")

ros_cc_binary(
    name = "multirobot",
    srcs = ["multirobot.cc"],
    deps = [
        "@drake_ros_core",
        "@drake_ros_tf2",
        "@drake_ros_viz",
        "@drake//multibody/plant",
        "@drake//multibody/parsing:parser",
        "@drake//systems/analysis:simulator",
        "@drake//systems/primitives:constant_vector_source",
    ]
)